2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_class_init):
	Fixed typo.

	* src/hd-home.c:
	Hooked up applet close button.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home.c:
	* src/hd-home.h:
	Added edit mode applet decors and signal handlers.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home-view.h:
	* src/hd-home.c:
	Start of Home edit mode.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-atoms.c:
	* src/hd-atoms.h:
	* src/hd-home.c:
	Added simple ClientMessage-based mechanism for applet-initiated
	home panning.

	* src/hd-applet-test.c:
	Simple Home applet.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_top_home):
	(hd_comp_mgr_home_clicked):
	Implemented topping of home.

	* src/hd-home-applet.c:
	(hd_home_applet_init):
	Make transient for HdDesktop client.

	* src/hd-home.c
	(hd_home_constructed):
	Revert default mode to NORMAL.

	* src/hd-switcher.c:
	* src/hd-switcher.h:
	(hd_switcher_deactivate):
	API to deactivate switcher and restore normal stack order.

2008-06-04  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c
	* src/hd-home-view.h
	* src/hd-home.c
	* src/hd-home.h
	Refactored panning code to avoid need to do pointer grab.

	* src/hd-util.c:
	* src/hd-util.h:
	Remove unnecessary functions.

	* src/Makefile.am
	* src/hd-comp-mgr.c
	* src/hd-wm.c:
	* src/hd-desktop.h:
	* src/hd-desktop.c:
	* src/hd-home-applet.c
	Custom MBWindowManagerClient subclass for our input-only desktop
	window.

2008-06-03  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	* src/hd-home.h:
	* src/hd-home-view.c:
	* src/hd-home-view.h:
	Handle applet removal.

2008-06-03  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	* src/hd-home.h:
	* src/hd-home-view.c:
	Forwarding of events to applets.

	* src/hd-util.c:
	* src/hd-util.h:
	(hd_util_ungrab_pointer):
	Added return value.

2008-06-03  Tomas Frydrych  <tf@o-hand.com>
